--- a/src/components/Accordion/style.module.scss
+++ b/src/components/Accordion/style.module.scss
@@ -13,40 +13,32 @@
   align-items: center;
   border: none;
   outline: none;
+  &__icon {
+    margin-right: 27px;
+    transition: transform 0.6s ease;
+  }
+  &__title {
+    margin: 0;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 130%;
+  }
+  &__content {
+    background-color: white;
+    overflow: hidden;
+    transition: max-height 0.6s ease;
+  }
+  &__text {
+    font-weight: 400;
+    font-size: 14px;
+    padding: 17px 18px 9px 18px;
+  }
 }
 
 .active {
   background-color: #ff3535;
   color: #fff;
-}
-
-.accordion__icon {
-  margin-right: 27px;
-  transition: transform 0.6s ease;
-}
-
-.accordion__title {
-  margin: 0;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 18px;
-  line-height: 130%;
-}
-
-.rotate {
-  transform: rotate(90deg);
-}
-
-.accordion__content {
-  background-color: white;
-  overflow: hidden;
-  transition: max-height 0.6s ease;
-}
-
-.accordion__text {
-  font-weight: 400;
-  font-size: 14px;
-  padding: 17px 18px 9px 18px;
 }
 
 @media (prefers-reduced-motion: reduce) {
